# mythic-depths

./: .gitignore  README.md  basic_rpg_class.py  config.py  dungeon.py  game.py  infinite_dungeon.py  interactables.py  inventory.py  items.py  player.py  pygame_example.py  pygame_test.py  pyproject.toml  setup.cfg  setup.py
entities/: an_entity.py  npc.py  player.py
mythic_depths/: main.py
mythic_depths/config/: config.py
mythic_depths/entities/: an_entity.py  npc.py  player.py
mythic_depths/systems/: collision.py  interactions.py  inventory.py  items.py  rendering.py  world_generation.py
mythic_depths/world/: dungeon.py  infinite_dungeon.py  interactables.py
systems/: inventory.py  items.py
tests/: conftest.py  test_inventory.py  test_pygame.py
world/: dungeon.py  infinite_dungeon.py
